Adicionando testes unitarios e ajustes gerais no projeto