@@ -1,18 +1,19 @@
 package br.com.fiap.postech.fastfood.adapters.persistence.itempedido;
 
-import br.com.fiap.postech.fastfood.adapters.persistence.entities.ItemEntity;
 import br.com.fiap.postech.fastfood.adapters.persistence.entities.ItemPedidoEntity;
-import br.com.fiap.postech.fastfood.adapters.persistence.entities.PedidoEntity;
 import br.com.fiap.postech.fastfood.adapters.persistence.item.ItemJpaRepository;
 import br.com.fiap.postech.fastfood.adapters.persistence.pedido.PedidoJpaRepository;
 import br.com.fiap.postech.fastfood.core.domain.Item;
 import br.com.fiap.postech.fastfood.core.domain.ItemPedido;
-import br.com.fiap.postech.fastfood.core.domain.Pagamento;
 import br.com.fiap.postech.fastfood.core.ports.itempedido.ItemPedidoPersistencePort;
-import java.util.List;
 import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Component;
+
+import java.util.Collections;
+import java.util.List;
+
+import static java.util.Objects.isNull;
 
 @RequiredArgsConstructor
 @Component
@@ -23,19 +24,17 @@ public class ItemPedidoPersistencePortImpl implements ItemPedidoPersistencePort 
   private final ItemJpaRepository itemJpaRepository;
   private final ModelMapper modelMapper;
 
-
   @Override
-  public ItemPedido addItemPedido(String numeroPedido, Item item, Integer quantidade) {
-    PedidoEntity pedidoEntity = pedidoJpaRepository.findByNumeroPedido(numeroPedido);
-    ItemEntity itemEntity = itemJpaRepository.findById(item.getId()).get();
+  public ItemPedido addItemPedido(final String numeroPedido, final Item item, final Integer quantidade) {
+    var pedidoEntity = pedidoJpaRepository.findByNumeroPedido(numeroPedido);
+    var itemEntity = itemJpaRepository.findById(item.getId()).get();
 
-    if (pedidoEntity == null || itemEntity == null) {
+    if (isNull(pedidoEntity) || isNull(itemEntity)) {
       // Lógica de tratamento caso o pedido ou item não sejam encontrados
       return null;
     }
 
-    ItemPedidoEntity itemPedidoEntity = itemPedidoJpaRepository.findByPedidoAndItem(pedidoEntity, itemEntity);
-
+    var itemPedidoEntity = itemPedidoJpaRepository.findByPedidoAndItem(pedidoEntity, itemEntity);
 
     if (itemPedidoEntity != null) {
       // Já existe um ItemPedidoEntity para o mesmo pedido e item, então atualize a quantidade e o valor
@@ -55,23 +54,23 @@ public class ItemPedidoPersistencePortImpl implements ItemPedidoPersistencePort 
   }
 
   @Override
-  public ItemPedido updateItemPedido(ItemPedido itemPedido) {
+  public ItemPedido updateItemPedido(final ItemPedido itemPedido) {
     return null;
   }
 
   @Override
-  public ItemPedido deleteItemPedido(ItemPedido itemPedido) {
+  public ItemPedido deleteItemPedido(final ItemPedido itemPedido) {
     return null;
   }
 
   @Override
   public List<ItemPedido> findAll() {
-    return itemPedidoJpaRepository.findAll().stream().map(entity -> modelMapper.map(entity, ItemPedido.class)).collect(
-        java.util.stream.Collectors.toList());
+    return itemPedidoJpaRepository.findAll().stream().map(entity -> modelMapper.map(entity, ItemPedido.class)).toList();
   }
 
   @Override
   public List<ItemPedido> findByID(Long id) {
-    return null;
+    return Collections.emptyList();
   }
+
 }
